--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <script>
     // Base folder for mockups (note the spaces). We'll assemble URLs with encodeURI.
-    const MOCKUP_BASE = "mockups/";
+    const MOCKUP_BASE = "mockups";
 
     // Known front mockups (filename and a rough color for the chip)
     const COLORS = [
