--- a/tabs/pick-color.html
+++ b/tabs/pick-color.html
@@ -1,19 +1,20 @@
 <section class="tab tab-pick-color color-tab" aria-labelledby="color-heading">
   <div class="color-header card">
     <div class="color-header__content">
-      <span class="color-header__label">Product Title</span>
-      <h2 id="color-heading" data-product-name>Loading…</h2>
-      <p class="color-header__code" data-product-code></p>
+      <h2 id="color-heading" class="color-header__title" data-product-name>Loading…</h2>
+      <p class="color-header__description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec turpis vitae nulla luctus tristique.
+        Curabitur blandit, mauris sit amet dictum interdum, erat elit pharetra nibh, ut congue urna neque at orci.
+        Sed id libero consequat, dignissim ipsum at, euismod nibh. Fusce commodo felis et orci auctor, quis cursus
+        magna scelerisque.
+      </p>
     </div>
   </div>
 
   <div class="color-body">
     <div class="color-preview card">
       <div class="color-preview__toolbar">
-        <div class="color-preview__info">
-          <span class="color-preview__label">Preview</span>
-          <h3 class="color-preview__color" data-color-name>—</h3>
-        </div>
+        <h3 class="color-preview__color" data-color-name>—</h3>
         <div class="color-preview__toggle" role="group" aria-label="Select shirt side">
           <button type="button" class="color-preview__side" data-side-button="front" aria-pressed="true">Front</button>
           <button type="button" class="color-preview__side" data-side-button="back" aria-pressed="false">Back</button>
