--- a/tabs/pick-product.html
+++ b/tabs/pick-product.html
@@ -12,4 +12,16 @@
     <p class="product-list__error hidden" data-error role="alert"></p>
     <ul class="product-list__grid" data-product-list hidden></ul>
   </div>
+
+  <div class="product-summary card">
+    <div class="product-summary__content">
+      <h2 class="product-summary__title" data-product-summary-name>Loading…</h2>
+      <p class="product-summary__description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec turpis vitae nulla luctus tristique.
+        Curabitur blandit, mauris sit amet dictum interdum, erat elit pharetra nibh, ut congue urna neque at orci.
+        Sed id libero consequat, dignissim ipsum at, euismod nibh. Fusce commodo felis et orci auctor, quis cursus
+        magna scelerisque.
+      </p>
+    </div>
+  </div>
 </section>
