--- a/tabs/pick-color.html
+++ b/tabs/pick-color.html
@@ -20,14 +20,18 @@
         </div>
         <div class="color-preview__selection" role="group" aria-label="Selected color">
           <button type="button" class="color-preview__selection-nav" data-color-nav="prev" aria-label="Previous color">
-            <span aria-hidden="true">◀</span>
+            <svg class="color-preview__selection-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M14.75 5.25a1 1 0 0 1 0 1.5L9.5 12l5.25 5.25a1 1 0 1 1-1.5 1.5l-6-6a1 1 0 0 1 0-1.5l6-6a1 1 0 0 1 1.5 0Z" />
+            </svg>
           </button>
           <div class="color-preview__selection-body">
             <span class="color-preview__selection-label">Selected Color</span>
             <h3 class="color-preview__color" data-color-name>—</h3>
           </div>
           <button type="button" class="color-preview__selection-nav" data-color-nav="next" aria-label="Next color">
-            <span aria-hidden="true">▶</span>
+            <svg class="color-preview__selection-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M9.25 5.25a1 1 0 0 1 1.5 0l6 6a1 1 0 0 1 0 1.5l-6 6a1 1 0 1 1-1.5-1.5L14.5 12 9.25 6.75a1 1 0 0 1 0-1.5Z" />
+            </svg>
           </button>
         </div>
       </div>
