update to pick product

--- a/tabs/pick-color.html
+++ b/tabs/pick-color.html
@@ -21,7 +21,7 @@
         <div class="color-preview__selection" role="group" aria-label="Selected color">
           <button type="button" class="color-preview__selection-nav" data-color-nav="prev" aria-label="Previous color">
             <svg class="color-preview__selection-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path d="M14.75 5.25a1 1 0 0 1 0 1.5L9.5 12l5.25 5.25a1 1 0 1 1-1.5 1.5l-6-6a1 1 0 0 1 0-1.5l6-6a1 1 0 0 1 1.5 0Z" />
+              <path d="M16 4L8 12l8 8V4Z" />
             </svg>
           </button>
           <div class="color-preview__selection-body">
@@ -30,7 +30,7 @@
           </div>
           <button type="button" class="color-preview__selection-nav" data-color-nav="next" aria-label="Next color">
             <svg class="color-preview__selection-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path d="M9.25 5.25a1 1 0 0 1 1.5 0l6 6a1 1 0 0 1 0 1.5l-6 6a1 1 0 1 1-1.5-1.5L14.5 12 9.25 6.75a1 1 0 0 1 0-1.5Z" />
+              <path d="m8 4 8 8-8 8V4Z" />
             </svg>
           </button>
         </div>
