--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   <div class="app-shell" data-view-mode="full">
     <header class="app-header">
       <h1>TeeCraft Studio</h1>
-      <button class="collapse-precision" aria-expanded="false" aria-controls="precision-panel">Adjust</button>
+      <div class="header-actions">
+        <div class="display-toggles" role="group" aria-label="Canvas display options">
+          <button type="button" class="header-toggle active" data-toggle="frame" aria-pressed="true">Frame</button>
+          <button type="button" class="header-toggle active" data-toggle="design" aria-pressed="true">Design</button>
+        </div>
+        <button class="collapse-precision" aria-expanded="false" aria-controls="precision-panel">Adjust</button>
+      </div>
     </header>
 
     <main class="canvas-region">
@@ -26,11 +32,14 @@
                 <defs>
                   <filter id="selection-shadow" x="-20%" y="-20%" width="140%" height="140%">
                     <feDropShadow dx="0" dy="1" stdDeviation="2" flood-color="#000" flood-opacity="0.25" />
-                </filter>
-              </defs>
+                  </filter>
+                  <clipPath id="design-area-clip">
+                    <rect id="design-area-clip-rect" width="440" height="583" rx="16" ry="16" />
+                  </clipPath>
+                </defs>
               <image href="assets/tshirt-base.svg" width="1155" height="1155" class="product-base" />
               <image href="assets/design_area.svg" x="361" y="180" width="440" height="583" class="design-area-overlay" />
-              <g id="design-area-group" transform="translate(361 180)">
+              <g id="design-area-group" transform="translate(361 180)" clip-path="url(#design-area-clip)">
                 <rect id="design-area-hitbox" width="440" height="583" fill="transparent" />
                 <g id="layer-root"></g>
               </g>
